# gpac-wasm-graph

./: .gitignore  README.md
generator/: pyproject.toml
generator/src/: main.py
ui/: .eslintrc  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/lib/gpac/: index.ts  types.ts
ui/lib/io/: file.ts
ui/public/: gpac.js  gpac.worker.js
ui/src/: App.tsx  main.tsx
ui/src/components/: CommandComponent.tsx  SearchComponent.tsx
ui/src/data/: codecs.json  filters.json
ui/src/hooks/: useFile.tsx
ui/src/nodes/: FilterNode.tsx  VideoNode.module.css  VideoNode.tsx
