[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Deniz <DenizUgur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
